--- a/style.css
+++ b/style.css
@@ -1,1 +1,74 @@
-/* Updated dark mode CSS with burnt orange and tactical colors */
+
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #121212;
+  color: #f0f0f0;
+}
+
+header, footer {
+  padding: 1em;
+  background: #1f1f1f;
+  text-align: center;
+}
+
+nav {
+  background: #222;
+  padding: 0.5em;
+  text-align: center;
+}
+
+nav a {
+  color: #ffa447;
+  margin: 0 1em;
+  text-decoration: none;
+}
+
+h1, h2, h3 {
+  color: #ffa447;
+}
+
+section {
+  margin: 2em;
+}
+
+ul {
+  list-style-type: square;
+}
+
+input, textarea, button {
+  display: block;
+  width: 100%;
+  margin-top: 0.5em;
+  padding: 0.75em;
+  border: none;
+  border-radius: 4px;
+}
+
+input, textarea {
+  background: #2a2a2a;
+  color: #f0f0f0;
+}
+
+button {
+  background: #ffa447;
+  color: #121212;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 1em;
+}
+
+.leader {
+  display: flex;
+  align-items: center;
+  margin: 2em 0;
+}
+
+.avatar {
+  width: 80px;
+  height: 80px;
+  background: url('https://upload.wikimedia.org/wikipedia/commons/6/6b/User-silhouette.svg') no-repeat center;
+  background-size: cover;
+  margin-right: 1em;
+  filter: brightness(0) invert(1);
+}
